fix vh on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -105,7 +105,7 @@ h2 {
 	position: fixed;
 	top: 0;
 	left: 0;
-	height: 100vh;
+	height: -webkit-fill-available;
 	width: 100vw;
 	background-color: rgba(128,128,128,0.5);
 	padding: 0;
